tests/snapshots/examples_fixtures/aoc__2025__aoc_day12_part1.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day12_part1.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Argument Type Mismatch

I found the wrong type in the 1st argument to `sum`.

  examples/aoc/2025/aoc_day12_part1.flx:52:26
   |
52 |     let needed = 9 * sum(counts)
   |                          ^^^^^^
   |                          ------ this argument has type `Array<Int>`

Note:
  expected argument type: List<Int>
  found argument type: Array<Int>
  the actual argument type is inferred from this expression

Help:
  Pass a `List<Int>` value as the 1st argument.
== stdout ==
<not executed>
